--- a/_config.yml
+++ b/_config.yml
@@ -15,3 +15,9 @@ kramdown:
     block:
       line_numbers: true
       start_line: 1
+
+title: CAS
+description: Jasig CAS - Single Sign On for the Web
+google_analytics: 
+show_downloads: true
+theme: jekyll-theme-midnight
